# FieldTuner-3.0

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.py  pyproject.toml  requirements.txt  test_app.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  release.yml
assets/screenshots/: README.md
releases/: PHASE1_RELEASE_NOTES.md  RELEASE_NOTES_V1.1.md
src/: __init__.py  constants.py  debug.py  main.py  settings_database.py  utils.py
src/core/: __init__.py  backup_manager.py  config_manager.py  presets.py  settings_database.py
src/ui/: __init__.py  main_window.py  theme.py
src/ui/components/: __init__.py
src/ui/pages/: __init__.py
tests/: __init__.py  test_basic.py
tests/fixtures/: README.md  reference_values.json  reference_values.txt
